--- a/server/package.json
+++ b/server/package.json
@@ -9,5 +9,8 @@
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "mongodb": "^3.5.7"
+  },
+  "scripts": {
+    "start": "node index.js"
   }
 }
